--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
-    "@material-ui/styles": "4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@reach/router": "1.3.4",
     "@walletconnect/web3-provider": "1.6.5",
+    "dotenv": "^10.0.0",
     "moralis": "0.0.45",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "prettier": "2.4.1",
     "typescript": "4.1.3"
   },
   "scripts": {
