--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@walletconnect/web3-provider": "1.6.5",
     "dotenv": "^10.0.0",
     "moralis": "0.0.45",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moralis": "0.2.3",
