--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reach/router": "1.3.4",
     "@walletconnect/web3-provider": "1.6.5",
     "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.1",
     "moralis": "0.0.45",
     "notistack": "^1.0.10",
     "react": "17.0.2",
