--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "moralis": "0.0.45",
     "notistack": "^1.0.10",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moralis": "0.2.3",
@@ -23,16 +24,17 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
-    "prettier": "2.4.1",
-    "typescript": "4.1.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.1"
+    "eslint-plugin-react": "^7.26.1",
+    "prettier": "2.4.1",
+    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js"
   },
   "browserslist": [
     ">0.2%",
