--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "deploy": "netlify deploy --prod"
   },
   "browserslist": [
     ">0.2%",
