--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@babel/runtime": "7.13.8",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
+    "husky": "^7.0.2",
     "prettier": "2.4.1",
     "typescript": "4.1.3"
   },
   "scripts": {
+    "prepare": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
