--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "@reach/router": "1.3.4",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "@walletconnect/web3-provider": "1.6.5",
     "dotenv": "^10.0.0",
     "moralis": "0.0.45",
@@ -20,15 +24,18 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moralis": "0.2.3",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "typescript": "4.0.5"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@types/prop-types": "^15.7.4",
+    "@types/reach__router": "^1.3.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.1",
     "husky": "^7.0.2",
-    "prettier": "2.4.1",
-    "typescript": "4.1.3"
+    "prettier": "2.4.1"
   },
   "scripts": {
     "prepare": "husky install",
@@ -36,7 +43,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js",
+    "lint": "eslint src/**/*.tsx",
     "deploy": "netlify deploy --prod"
   },
   "browserslist": [
