adding smart contract page where it call cloud function to fetch data from blockchain

--- a/src/list/appbar.json
+++ b/src/list/appbar.json
@@ -7,6 +7,10 @@
         {
             "name": "plugins",
             "title": "Plugins"
+        },
+        {
+            "name": "smart-contracts",
+            "title": "Smart Contracts"
         }
     ],
     "bottom": [
