--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-moralis": "0.2.4",
     "react-scripts": "4.0.0",
+    "swr": "^1.0.1",
     "typescript": "4.0.5"
   },
   "devDependencies": {
