--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-moralis": "0.2.4",
     "react-scripts": "4.0.0",
     "swr": "^1.0.1",
