--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@types/react-dom": "^17.0.9",
     "@walletconnect/web3-provider": "1.6.5",
     "dotenv": "^10.0.0",
+    "material-ui-dropzone": "^3.5.0",
     "moralis": "0.0.45",
     "notistack": "^1.0.10",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.4.2",
     "react-moralis": "0.2.4",
     "react-scripts": "4.0.0",
     "swr": "^1.0.1",
