--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
   "semi": true,
   "singleQuote": false,
   "trailingComma": "all",
-  "bracketSpacing": true,
-  "fluid": false
+  "bracketSpacing": true
 }
